CNN Model accuracy = 0.9914 without normalizing mnist dataset

--- a/cnn_handwritten.ipynb
+++ b/cnn_handwritten.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXrWPlCrATCnOhA8gtokkS",
+      "authorship_tag": "ABX9TyNrTQOszzbv6gVCUNHXmvg9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -326,10 +326,65 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Compile and Train the MODEL\n",
+        "1. Optimizer = 'adam' ->  **Adjusts weights efficiently**\n",
+        "2. loss = 'sparse_categorical_crossentropy' -> **Suitable for Multi-Class Classification**\n",
+        "3. metrics='accuracy' -> **gives accuracy of model during training**"
+      ],
+      "metadata": {
+        "id": "wx_sRobsQ7fR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+        "model.fit(X_test, y_test, epochs=5, validation_data=(X_test, y_test))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rB4D9Jn5OMlq",
+        "outputId": "73956862-2ee5-474e-db92-e7626e543568"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 25ms/step - accuracy: 0.9774 - loss: 0.0815 - val_accuracy: 0.9829 - val_loss: 0.0538\n",
+            "Epoch 2/5\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 29ms/step - accuracy: 0.9837 - loss: 0.0578 - val_accuracy: 0.9890 - val_loss: 0.0344\n",
+            "Epoch 3/5\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 27ms/step - accuracy: 0.9909 - loss: 0.0284 - val_accuracy: 0.9849 - val_loss: 0.0577\n",
+            "Epoch 4/5\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 26ms/step - accuracy: 0.9901 - loss: 0.0420 - val_accuracy: 0.9948 - val_loss: 0.0170\n",
+            "Epoch 5/5\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 27ms/step - accuracy: 0.9914 - loss: 0.0296 - val_accuracy: 0.9926 - val_loss: 0.0245\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x7cdae1fadbd0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "rB4D9Jn5OMlq"
+        "id": "-uuy_6GHROlb"
       },
       "execution_count": null,
       "outputs": []
