Saved and again loaded model

--- a/cnn_handwritten.ipynb
+++ b/cnn_handwritten.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrTQOszzbv6gVCUNHXmvg9",
+      "authorship_tag": "ABX9TyNnd48gYBtVKJzc+xowANsy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Load Mnist Dataset\n",
+        "###**1.** Load Mnist Dataset\n",
+        "\n",
+        "1.   List item\n",
+        "2.   List item\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "*   X_train has (60000, 28, 28)\n",
@@ -104,7 +109,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Visualize first image from mnist dataset"
+        "### **2.** Visualize first image from mnist dataset"
       ],
       "metadata": {
         "id": "Yof7NYylIyM6"
@@ -151,7 +156,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Build CNN\n",
+        "### **3.** Build CNN\n",
         "1. Conv2D(30, (3,3), 'relu', (28, 28,1))\n",
         "    1. 30 -> number of filters to detect patterns\n",
         "    2. (3,3) -> each filter scans 3 * 3 pixels at a time\n",
@@ -328,7 +333,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Compile and Train the MODEL\n",
+        "### **4.** Compile and Train the MODEL\n",
         "1. Optimizer = 'adam' ->  **Adjusts weights efficiently**\n",
         "2. loss = 'sparse_categorical_crossentropy' -> **Suitable for Multi-Class Classification**\n",
         "3. metrics='accuracy' -> **gives accuracy of model during training**"
@@ -381,10 +386,310 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **5.** Evaluate The Trained Model"
+      ],
+      "metadata": {
+        "id": "Dk3oh1sVTS8m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_loss, test_loss = model.evaluate(X_test, y_test)\n",
+        "print(f'Train Loss : {train_loss}')\n",
+        "print(f'Test Loss : {test_loss}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-uuy_6GHROlb",
+        "outputId": "1077a031-6d2f-4217-d1a5-2bd5ab1f6871"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - accuracy: 0.9904 - loss: 0.0300\n",
+            "Train Loss : 0.024462388828396797\n",
+            "Test Loss : 0.9926000237464905\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **6.** Save Model"
+      ],
+      "metadata": {
+        "id": "x7Vl3cdcTpAB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.save('my_model.h5')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "crZefXcKTh3a",
+        "outputId": "29314039-31f6-4d2a-c94b-c21d18b1c937"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **7.** Try Loading Saved Model"
+      ],
+      "metadata": {
+        "id": "3NvocYyQT4A-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_model = models.load_model('my_model.h5')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0MSvXU_gTyXg",
+        "outputId": "b7d698db-9e07-4eed-b56d-8cd772eabdad"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_test.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9R0DzhP2UVJW",
+        "outputId": "e2184c9f-28f8-409f-a103-12f4979f33c9"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(10000, 28, 28)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **8.** Predict using my_model"
+      ],
+      "metadata": {
+        "id": "pw0kSK2sUy-B"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_model_pred = my_model.predict(X_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZLjEEfXhUBtC",
+        "outputId": "fd951d18-00d2-43af-cd4f-8a3e079ee6f5"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_model_pred[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DM_uyNYAUMZh",
+        "outputId": "f804e793-8784-4df6-e87c-1a7368ffca11"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2.9285460e-20, 1.9029272e-17, 9.4367623e-16, 4.1236092e-15,\n",
+              "       3.4054489e-21, 1.1231447e-19, 3.3345250e-30, 9.9999994e-01,\n",
+              "       4.3406435e-20, 3.6225133e-12], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f'True Labels : {y_test[5]} \\nPredicted label : {np.argmax(my_model_pred[5])}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M4e1NYl3Up1N",
+        "outputId": "4058fbc4-093c-4642-d675-634c40bdfc8c"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True Labels : 1 \n",
+            "Predicted label : 1\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "-uuy_6GHROlb"
+        "id": "nWKvuyeeWzfP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RiHcLKs5Wzwx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_model_pred.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e8VZCK0xVijo",
+        "outputId": "6cf28fd9-e7be-433c-d416-93aa00833147"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(10000, 10)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pred_val = [np.argmax(i) for i in my_model_pred]"
+      ],
+      "metadata": {
+        "id": "77YKny10UsDk"
+      },
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pred_val[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N-k-lP0XWDxw",
+        "outputId": "e92073b6-3d96-4a90-c0b0-14953703a373"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.int64(7)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "x7-4GE2cUvj9"
+      },
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YNUqSr08VKFP"
       },
       "execution_count": null,
       "outputs": []
