Early Stopping & Model Checkpoint

--- a/cnn_handwritten.ipynb
+++ b/cnn_handwritten.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtRIcoI59MXQbHWnsi4Zu5",
+      "authorship_tag": "ABX9TyMd6D963be7tkSMEe3RNGoT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 4,
       "metadata": {
         "id": "qKGWC2d_EbOA"
       },
@@ -37,7 +37,8 @@
         "import tensorflow as tf\n",
         "from tensorflow.keras import layers, models, datasets\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint"
       ]
     },
     {
@@ -76,10 +77,23 @@
         "(X_train, y_train), (X_test, y_test) = datasets.mnist.load_data()\n"
       ],
       "metadata": {
-        "id": "0wG2_ps1Eyce"
+        "id": "0wG2_ps1Eyce",
+        "outputId": "60cfa7dc-f4a0-44e9-d47e-a7e8ebed91d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 71,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -90,7 +104,7 @@
       "metadata": {
         "id": "4O4fPs8gdDue"
       },
-      "execution_count": 72,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -100,12 +114,12 @@
       ],
       "metadata": {
         "id": "24U7JxPCdNhf",
-        "outputId": "49635ec3-04d5-49e9-ac5d-5fb420659f34",
+        "outputId": "e40cd3cb-5416-4af8-e2db-d45819ef843c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 73,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +129,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 73
+          "execution_count": 7
         }
       ]
     },
@@ -130,7 +144,7 @@
       "metadata": {
         "id": "KNGBEhvTb_cp"
       },
-      "execution_count": 100,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -139,7 +153,7 @@
       "metadata": {
         "id": "8RqMNzxKcy3x"
       },
-      "execution_count": 74,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -149,22 +163,22 @@
       ],
       "metadata": {
         "id": "uQCk5Z-tcVZO",
-        "outputId": "29098fe7-d905-4ca3-86d5-aa9b5404b28d",
+        "outputId": "fcb8cef2-20e4-4453-e8a0-38e08d9c4e90",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 101,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "4"
+              "3"
             ]
           },
           "metadata": {},
-          "execution_count": 101
+          "execution_count": 9
         }
       ]
     },
@@ -179,9 +193,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t5bcI76jE14U",
-        "outputId": "a865041e-a442-4748-defa-754eba3a9019"
+        "outputId": "56ba547b-c166-4e48-9b17-f30bf4599ff4"
       },
-      "execution_count": 76,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,9 +228,9 @@
           "height": 469
         },
         "id": "yBZngCrBG_46",
-        "outputId": "307a2941-b759-49e4-e53a-f044dbef6ddb"
+        "outputId": "4bb0b438-ea4d-4974-a06b-533da4d0522b"
       },
-      "execution_count": 77,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,7 +240,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 77
+          "execution_count": 11
         },
         {
           "output_type": "display_data",
@@ -246,7 +260,7 @@
       "metadata": {
         "id": "ZZsLfZczcmJP"
       },
-      "execution_count": 77,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -294,23 +308,10 @@
         "])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "O0to0JbHHRi1",
-        "outputId": "9e8263e9-ddad-48f9-eb88-252ba5303ae5"
+        "id": "O0to0JbHHRi1"
       },
-      "execution_count": 78,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/keras/src/layers/convolutional/base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-          ]
-        }
-      ]
+      "execution_count": 12,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -354,16 +355,22 @@
         "m1.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
         "\n",
-        "m1.fit(X_train, y_train, epochs=5, validation_data=(X_test, y_test))"
+        "# Early stopping and model checkpoint\n",
+        "earlyStopping = EarlyStopping(monitor='val_loss', patience=7)\n",
+        "modelCheckpoint = ModelCheckpoint(filepath='my_model_2.weights.h5', monitor='val_loss', save_best_only=True, save_weights_only=True)\n",
+        "m1.fit(X_train, y_train, epochs=5,  validation_data=(X_test, y_test), callbacks=[earlyStopping, modelCheckpoint])\n",
+        "\n",
+        "\n",
+        "# m1.fit(X_train, y_train, epochs=5, validation_data=(X_test, y_test))"
       ],
       "metadata": {
         "id": "C-31ijKFNntd",
-        "outputId": "90d2adaf-b7f1-4823-a0da-c270c728a2e2",
+        "outputId": "cd978e7a-dc8f-4174-c438-d3a9ef48a4fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 79,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,27 +380,27 @@
             "4\n",
             "4\n",
             "4\n",
-            "\u001b[1m1874/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 28ms/step - accuracy: 0.9065 - loss: 0.30494\n",
-            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m57s\u001b[0m 30ms/step - accuracy: 0.9065 - loss: 0.3047 - val_accuracy: 0.9825 - val_loss: 0.0589\n",
+            "\u001b[1m1874/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 30ms/step - accuracy: 0.8983 - loss: 0.33294\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m63s\u001b[0m 32ms/step - accuracy: 0.8984 - loss: 0.3327 - val_accuracy: 0.9824 - val_loss: 0.0511\n",
             "Epoch 2/5\n",
-            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 26ms/step - accuracy: 0.9857 - loss: 0.0466 - val_accuracy: 0.9870 - val_loss: 0.0373\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m83s\u001b[0m 32ms/step - accuracy: 0.9838 - loss: 0.0508 - val_accuracy: 0.9868 - val_loss: 0.0394\n",
             "Epoch 3/5\n",
-            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m82s\u001b[0m 26ms/step - accuracy: 0.9900 - loss: 0.0309 - val_accuracy: 0.9898 - val_loss: 0.0327\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m78s\u001b[0m 30ms/step - accuracy: 0.9900 - loss: 0.0306 - val_accuracy: 0.9911 - val_loss: 0.0257\n",
             "Epoch 4/5\n",
-            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m52s\u001b[0m 28ms/step - accuracy: 0.9927 - loss: 0.0216 - val_accuracy: 0.9904 - val_loss: 0.0292\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m85s\u001b[0m 31ms/step - accuracy: 0.9927 - loss: 0.0212 - val_accuracy: 0.9895 - val_loss: 0.0322\n",
             "Epoch 5/5\n",
-            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m79s\u001b[0m 26ms/step - accuracy: 0.9946 - loss: 0.0172 - val_accuracy: 0.9894 - val_loss: 0.0339\n"
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m91s\u001b[0m 36ms/step - accuracy: 0.9949 - loss: 0.0165 - val_accuracy: 0.9887 - val_loss: 0.0335\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.history.History at 0x798320b51910>"
+              "<keras.src.callbacks.history.History at 0x7f992d6258d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 13
         }
       ]
     },
@@ -409,7 +416,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -436,7 +443,7 @@
         "id": "3cSJivXHNwqZ",
         "outputId": "0496db90-d3dc-4df1-95ec-40702d4bf0ee"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -562,7 +569,7 @@
         "id": "rB4D9Jn5OMlq",
         "outputId": "6d2babcf-30cb-4de9-bbe1-96c20f80adba"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,7 +622,7 @@
         "id": "-uuy_6GHROlb",
         "outputId": "7073a034-cca3-4675-bc29-18a9144092a7"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,7 +656,7 @@
         "id": "crZefXcKTh3a",
         "outputId": "0003d7c3-8224-4d04-b696-d327abd7f24e"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,7 +688,7 @@
         "id": "0MSvXU_gTyXg",
         "outputId": "75def28d-92f5-4faf-8493-d6b2da6bfe7a"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -704,7 +711,7 @@
         "id": "9R0DzhP2UVJW",
         "outputId": "aee0689d-99d0-4788-e554-6b0d87887469"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -731,7 +738,7 @@
         "id": "nvLPsFobXhCe",
         "outputId": "873b51fb-5d3f-41cc-90f0-76c3062e54e1"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -855,7 +862,7 @@
       "metadata": {
         "id": "1guK8TcUMmYg"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -871,7 +878,7 @@
           "height": 490
         }
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -913,7 +920,7 @@
         "id": "ZLjEEfXhUBtC",
         "outputId": "1e06c33a-92a5-45d7-d970-28c34da7f01a"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -937,7 +944,7 @@
         "id": "SUO50be6X30Y",
         "outputId": "e38e12bc-f358-4dae-9c81-21272cc117fb"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -962,7 +969,7 @@
         "id": "DM_uyNYAUMZh",
         "outputId": "957b1a5e-5f18-44fd-8b82-79180a0599aa"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -990,7 +997,7 @@
         "id": "M4e1NYl3Up1N",
         "outputId": "94153d79-d000-45b3-8f5f-dcbfa4f50732"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1023,7 +1030,7 @@
         "id": "gPS03wWLZh2B",
         "outputId": "2b534610-eac6-4455-a4ae-7503e4b3f83f"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1049,7 +1056,7 @@
         "id": "er7_LbFlZSNk",
         "outputId": "70e0b764-b35f-4875-fe54-f7f9dbd4eb10"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1069,7 +1076,7 @@
       "metadata": {
         "id": "tNldHCNXZmPE"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1089,7 +1096,7 @@
       "metadata": {
         "id": "RiHcLKs5Wzwx"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1105,7 +1112,7 @@
         "id": "e8VZCK0xVijo",
         "outputId": "0d64c147-4376-4cf1-cad8-78ba11d1082a"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1147,7 +1154,7 @@
       "metadata": {
         "id": "T3nqIKbWaDzX"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1166,7 +1173,7 @@
         "id": "77YKny10UsDk",
         "outputId": "155505be-b23b-4db9-a7bc-4e996d0e9123"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1203,7 +1210,7 @@
       "metadata": {
         "id": "N-k-lP0XWDxw"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1212,7 +1219,7 @@
       "metadata": {
         "id": "x7-4GE2cUvj9"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1221,7 +1228,7 @@
       "metadata": {
         "id": "YNUqSr08VKFP"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     }
   ]
